improve-it-tests: Refactored CassandraRunner and enabled parallel test execution
Several changes in module : embedded. Tests from a single package are executed in a separate JVM. Tests from separate packages are executed in parallel.
DynamicCassandraPorts automatically find a range for free ports and use them.